[package]
name = "moz_cbor"
version = "0.1.2"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>", "David Keeler <dkeeler@mozilla.com>"]
description = "Library to use CBOR (https://tools.ietf.org/html/rfc7049) in Rust"
repository = "https://github.com/franziskuskiefer/cbor-rust"
keywords = ["jose", "cbor"]
license = "MPL-2.0"

[features]
default = ["std"]
std = []

[dependencies]
core2 = { git = "https://github.com/AnimaGUS-minerva/core2", branch = "0.3.0-alpha.1-compat", default-features = false, features=["compat"], optional = true }
